--- a/css/styles.css
+++ b/css/styles.css
@@ -51,14 +51,34 @@ body {
 }
 #duration {
     position: absolute;
-    top: 0;
-    right: 3%;
+    top: 60;
+    left: 3%;
     text-align: right;
     font-size: 26px;
     opacity: 0.5;
     font-weight: 300;
     color: #fff;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.33);
+}
+
+.close  {
+    position: fixed;
+    top: 20px;
+    right: 3%;
+    text-align: center;
+    font-size: 46px;
+    opacity: 0.8;
+    font-weight: 400;
+    color: #fff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.33);
+    cursor: pointer;
+    background: transparent;
+    height: 50px;
+    width: 50px;
+    border-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Controls */
