--- a/frontend_2/css/index.css
+++ b/frontend_2/css/index.css
@@ -35,7 +35,7 @@ h2 {
     font-family: "Duru Sans",sans-serif;
 }
 
-h4 {
+h3 {
     text-align: center;
     padding: 12px;
     font-size: 20px;
@@ -46,11 +46,118 @@ h4 {
     font-family: "Duru Sans",sans-serif;
 }
 
-.dev-popup{
-background-color: darkgray;
-border: 1px solid black;
-width: 400px;
-margin: 0 auto;
+h4 {
+    text-align: center;
+    padding: 12px;
+    font-size: 18px;
+    font-weight: 200;
+    line-height: .9;
+    margin-bottom: 6px;
+    margin-top: 0;
+    font-family: "Duru Sans",sans-serif;
+}
+
+input {
+    width: 100%;
+    box-sizing: border-box;
+    border: 1px solid #d5d5d5;
+    border-radius: 6px;
+    padding: 12px 24px;
+    margin: 12px 0 6px;
+    font-size: 18px;
+    box-shadow: none;
+    text-transform: lowercase;
+}
+
+.popup{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transition: all 1.2s ease 0s;
+}
+
+ .popup:target{
+     opacity: 1;
+     visibility: visible;
+ }
+
+ .popup:target .popup-content{
+    transform: translate(0px, 0px);
+    opacity: 1;
+ }
+ .popup-area{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;   
+ }
+
+.popup-body{
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 10px;
+}
+
+.popup-content{
+    background-color: #fff;
+    color: #000;
+    max-width: 600px;
+    padding: 30px;
+    border-radius: 24px;
+    border: 1px solid rgba(0,0,0,.2);
+    box-shadow: 2px 2px 4px rgba(0,0,0,.2);
+    position: relative;
+    overflow-x: hidden;
+    transition: all 1.2s ease 0s;
+    opacity: 0;
+    transform: perspective(250px) translate(0px, 200%) rotateX(45deg);
+}
+
+.popup-close{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 20px;
+    text-decoration: none;
+    color: #000;
+}
+
+.box-button-subscriptions{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-flow: row nowrap;
+    justify-content: center;
+}
+
+.button-subscriptions{
+    max-width: 60%;
+    text-decoration: none;
+    flex-grow: 1;
+    flex-shrink: 1;
+    margin: 12px 12px 18px;
+    min-width: calc(30% - 12px);
+    display: flex;
+    align-items: center;
+    flex-flow: row nowrap;
+    justify-content: center;
+    font-size: 22px;
+    padding: 12px 16px;
+    border-radius: 8px;
+    border: 1px solid rgba(0,0,0,.2);
+    box-shadow: 2px 2px 4px rgba(0,0,0,.2);
+    color: rgb(229, 209, 135);
+    background: linear-gradient(45deg, rgb(79, 156, 187), rgb(3, 142, 140));
 }
 
 p {
@@ -77,6 +184,15 @@ p {
     margin: 0 auto;
     padding: 0;
     position: relative;
+}
+
+.header-dilimetr{
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100px;
+    width: 100px;
+    background: rgba(255, 255, 255, 0);
 }
 
 .header {
@@ -247,6 +363,95 @@ p {
     color: rgb(229, 209, 135);
 }
 
+.input-email-descriptions {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    margin-bottom: 12px;
+    color: #888;
+    font-size: 10px;
+}
+
+.input-email-bottomline{
+    border-bottom: 2px solid #000;
+    margin-bottom: 12px;
+}
+
+.login-button{
+    background: linear-gradient(45deg, rgb(79, 156, 187), rgb(3, 142, 140));
+    flex-grow: 1;
+    flex-shrink: 1;
+    margin: 12px 0;
+    display: flex;
+    align-items: center;
+    flex-flow: row nowrap;
+    justify-content: center;
+    border: 1px solid rgba(0,0,0,.2);
+    padding: 12px 16px;
+    border-radius: 8px;
+    font-size: 14px;
+    box-shadow: 2px 2px 4px rgba(0,0,0,.2);
+    transition: .4s;
+    user-select: none;
+    cursor: pointer;
+    outline: none;
+    width: 100%;
+    overflow: hidden;
+    font-size: 18px;
+    font-weight: 400;
+    color: rgb(229, 209, 135);
+}
+
+.exit-button{
+    background: linear-gradient(45deg, rgb(79, 156, 187), rgb(3, 142, 140));
+    flex-grow: 1;
+    flex-shrink: 1;
+    margin: 12px 0;
+    display: flex;
+    align-items: center;
+    flex-flow: row nowrap;
+    justify-content: center;
+    border: 1px solid rgba(0,0,0,.2);
+    padding: 12px 16px;
+    border-radius: 8px;
+    font-size: 14px;
+    box-shadow: 2px 2px 4px rgba(0,0,0,.2);
+    transition: .4s;
+    user-select: none;
+    cursor: pointer;
+    outline: none;
+    width: 100%;
+    overflow: hidden;
+    font-size: 18px;
+    font-weight: 400;
+    color: rgb(229, 209, 135);
+}
+
+.subscribe-button{
+    background: linear-gradient(45deg, rgb(79, 156, 187), rgb(3, 142, 140));
+    flex-grow: 1;
+    flex-shrink: 1;
+    margin: 12px 0 0;
+    display: flex;
+    align-items: center;
+    flex-flow: row nowrap;
+    justify-content: center;
+    border: 1px solid rgba(0,0,0,.2);
+    padding: 12px 16px;
+    border-radius: 8px;
+    font-size: 14px;
+    box-shadow: 2px 2px 4px rgba(0,0,0,.2);
+    transition: .4s;
+    user-select: none;
+    cursor: pointer;
+    outline: none;
+    width: 100%;
+    overflow: hidden;
+    font-size: 18px;
+    font-weight: 400;
+    color: rgb(229, 209, 135);
+}
+
 .footer {
     border-radius: 0;
     min-width: 140%;
@@ -305,4 +510,96 @@ p {
     text-decoration: none;
     color: #000;
     text-transform: uppercase;
+}
+
+.date_block {
+    color: #007aff;
+    padding: 12px;
+    font-weight: 500;
+}
+
+.date_block span {
+    color: red;
+}
+
+.ac-container{
+    width: 100%;
+}
+
+.ac-container label{
+    font-family: 'Arial Narrow', Arial, sans-serif;
+    padding: 5px 0;
+    position: relative;
+    z-index: 20;
+    display: block;
+    height: 30px;
+    cursor: pointer;
+    color: #000;
+    text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
+    line-height: 33px;
+    font-size: 14px;
+    white-space: nowrap;  
+}
+
+
+.ac-container label:hover{
+    background: #fff;
+}
+
+.ac-container label:hover:after,
+.ac-container input:checked + label:hover:after{
+    content: '';
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    right: 13px;
+    top: 7px; 
+}
+
+.ac-container input{
+    display: none;
+}
+
+.ac-container article{
+    background: rgba(255, 255, 255, 0.5);
+    margin-top: -1px;
+    overflow: hidden;
+    height: 0px;
+    position: relative;
+    z-index: 10;
+    -webkit-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+    -moz-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+    -o-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+    -ms-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+    transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+}
+.ac-container input:checked ~ article {
+     -webkit-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+    -moz-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+    -o-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+    -ms-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+    transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
+    height: 300px;
+}
+
+.ac-container article {
+    font-style: italic;
+    color: #777;
+    line-height: 23px;
+    font-size: 14px;
+    text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
+    overflow-x: hidden;
+    overflow-y: auto;
+    
+}
+
+.accordion-content{
+    margin: 0;
+    padding: 0;
+    color: #777;
+    line-height: 23px;
+    font-size: 14px;
+    
+
+
 }
