--- a/frontend_2/css/styles.css
+++ b/frontend_2/css/styles.css
@@ -34,15 +34,16 @@ body {
 }
 
 #title {
+    position: absolute;
     width: 100%;
-    top: 3%;
+    bottom: 100px;
     line-height: 34px;
     height: 34px;
     text-align: center;
-    font-size: 24px;
+    font-size: 22px;
     opacity: 0.9;
     font-weight: 300;
-    padding: 0 60px;
+    padding: 0;
     color: #fff;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.33);
 }
@@ -264,15 +265,17 @@ body {
 }
 .list-song {
     width: 100%;
-    height: 60px;
-    font-size: 28px;
-    line-height: 60px;
+    height: 30px;
+    font-size: 18px;
+    line-height: 30px;
     text-align: center;
     font-weight: bold;
     color: #fff;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.33);
     padding: 0 12px;
+    white-space: nowrap;
 }
+
 .list-song:hover {
     background-color: rgba(255, 255, 255, 0.1);
     cursor: pointer;
