--- a/frontend_1/css/index.css
+++ b/frontend_1/css/index.css
@@ -492,17 +492,16 @@ p {
 }
 
 .install-box-for-pwa {
-    position: fixed;
-    top: 2px;
-    left: 2px;
-    width: 150px;
-    height: 50px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    max-width: 600px;
+    width: 100%;
 }
 
 .install-box-for-pwaios {
-    position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+    flex-grow: 1;
 }
 
 
