Откатываю большой файл трека 16 так как подозреваю что из за него идет зависание на айфоне

--- a/frontend_1/css/styles4.css
+++ b/frontend_1/css/styles4.css
@@ -13,6 +13,7 @@ body {
     padding: 0;
     margin: 0;
     overflow: hidden;
+    background: #4f99bb;
     background-image: url(lubov-medisi.jpg);
     background-position: center, center;
     background-size: cover;
