--- a/frontend_1/css/styles2.css
+++ b/frontend_1/css/styles2.css
@@ -13,7 +13,7 @@ body {
     padding: 0;
     margin: 0;
     overflow: hidden;
-    background: #bb71f3;
+    background: #4f99bb;
     background-image: url(zdorovie-medisi.jpg);
     background-position: center, center;
     background-size: cover;
